SF Primes/src/objects/Key_Reps_Start_Of_FY__c.object
<CustomObject>
    <description>List the rep at the start of the fiscal year that does not change each year. To validate sales awards we need to audit sales reps deals based on if they owned the territory this QC is backed out for award purpose.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Key Reps Start Of FY</relationshipLabel>
        <relationshipName>Key_Reps_Start_Of_FY</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DSM_Nat_Ent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSM-Nat-Ent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Key_Reps_Start_Of_FY2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Key_Reps_Start_Of_FY1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FY__c</fullName>
        <label>FY</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Key_Reps_Start_Of_FY</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Key Reps Start Of FY</label>
    <nameField>
        <displayFormat>LYKR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Reps Start Of FY</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>